--- a/templates/contacts.html.twig
+++ b/templates/contacts.html.twig
@@ -6,7 +6,7 @@
             <p>Телефон: +375295841005</p>
             <p>E-mail: info@alcoholstore.ru</p>
             <h2>Обратная связь</h2>
-            <form>
+            <form method="post" action="../check_message_and_email.php">
                 <div class ="form-group">
                     <label for="name">Имя:</label>
                     <input type="text" id="name" name="name" required>
