--- a/templates/bucket.html.twig
+++ b/templates/bucket.html.twig
@@ -8,25 +8,25 @@
             </ul>
             <p>Общая стоимость: 1400 рублей</p>
         </div>
-        <form>
+        <form method="post" action="../process_email.php">
             <div class="form-group">
                 <label for="name">Имя:</label>
-                <input type="text" id="name" name="name">
+                <input type="text" id="name" name="name"  required>
             </div>
 
             <div class="form-group">
                 <label for="email">Email:</label>
-                <input type="email" id="email" name="email">
+                <input type="email" id="email" name="email"  required>
             </div>
 
             <div class="form-group">
                 <label for="phone">Телефон:</label>
-                <input type="tel" id="phone" name="phone">
+                <input type="tel" id="phone" name="phone"  required>
             </div>
 
             <div class="form-group">
                 <label for="address">Адрес:</label>
-                <textarea id="address" name="address"></textarea>
+                <textarea id="address" name="address"  required></textarea>
             </div>
 
             <input type="submit" value="Оформить заказ">
